--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,44 @@
 // A launch configuration that launches the extension inside a new window
 {
-  "version": "0.1.0",
-  "configurations": [
-    {
-      "name": "Launch Extension",
-      "type": "extensionHost",
-      "request": "launch",
-      "runtimeExecutable": "${execPath}",
-      "args": ["--extensionDevelopmentPath=${workspaceRoot}" ],
-      "preLaunchTask": "build"
-    }
-  ]
+	"version": "0.1.0",
+	"configurations": [
+		{
+			"name": "Launch Program",
+			"program": "${workspaceFolder}/app.js",
+			"request": "launch",
+			"skipFiles": ["<node_internals>/**"],
+			"type": "node"
+		},
+		{
+			"name": "Attach",
+			"port": 9229,
+			"request": "attach",
+			"skipFiles": ["<node_internals>/**"],
+			"type": "node"
+		},
+		{
+			"name": "Launch via NPM",
+			"request": "launch",
+			"runtimeArgs": ["run-script", "debug"],
+			"runtimeExecutable": "npm",
+			"skipFiles": ["<node_internals>/**"],
+			"type": "node"
+		},
+		{
+			"name": "Launch via NPM",
+			"request": "launch",
+			"runtimeArgs": ["run-script", "debug"],
+			"runtimeExecutable": "npm",
+			"skipFiles": ["<node_internals>/**"],
+			"type": "node"
+		},
+		{
+			"name": "Launch Extension",
+			"type": "extensionHost",
+			"request": "launch",
+			"runtimeExecutable": "${execPath}",
+			"args": ["--extensionDevelopmentPath=${workspaceRoot}"],
+			"preLaunchTask": "build"
+		}
+	]
 }
