--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,16 @@
 {
-  "version": "0.1.0",
-  "command": "npm",
-  "isShellCommand": true,
-  "showOutput": "always",
-  "suppressTaskName": true,
-  "tasks": [
-    {
-      "isBuildCommand": true,
-      "taskName": "build",
-      "args": ["start"]
-    }
-  ]
+	"version": "2.0.0",
+	"command": "npm",
+	"tasks": [
+		{
+			"label": "build",
+			"type": "shell",
+			"args": ["start"],
+			"problemMatcher": [],
+			"group": {
+				"_id": "build",
+				"isDefault": false
+			}
+		}
+	]
 }
